# studio-kit

./: README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
scripts/: install.sh  uninstall.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  scheduler.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/api/: claude.rs  exchange.rs  mod.rs  openai.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: Calendar.tsx  ContentEditor.tsx  MediaUploader.tsx  Settings.tsx  SubtitleGenerator.tsx  WeeklyPlanGenerator.tsx
web/: README.md  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/ai/chat/: route.ts
web/src/app/api/ai/generate/: route.ts
web/src/app/api/ai/weekly-plan/: route.ts
web/src/app/assets/: page.tsx
web/src/app/auth/callback/: route.ts
web/src/app/login/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/usage/: page.tsx
web/src/app/weekly/: page.tsx
web/src/components/: ContentEditor.tsx  Navigation.tsx  StudioSelector.tsx
web/src/lib/: db.ts  studio-context.tsx  types.ts
web/src/lib/supabase/: client.ts  server.ts
web/supabase/: schema.sql
web/supabase/.temp/: pooler-url  project-ref
web/supabase/migrations/: 001_add_studio_tone.sql  002_create_storage_bucket.sql
